fixed silly mistakes with button position

--- a/gallery.html
+++ b/gallery.html
@@ -9,15 +9,17 @@
     <!-- <link rel="stylesheet" href="test.css"> -->
 </head>
 <body>
-    <div class="wrapper">
-        <h1 class="floating borderfit">Zachary Sollecito</h1>'
-        <form action="./contact.html">
-            <button  type='submit'>Contact</button>
-        </form>
-        <form action="./index.html">
-            <button type='submit'>About Me</button>
-        </form><br><br>
-    </div>
+    <h1 class="floating borderfit">Zachary Sollecito</h1>
+    <form action="./contact.html">
+        <button type='submit'>Contact</button>
+    </form>
+    <form action="./index.html">
+        <button type='submit'>About Me</button>
+    </form>
+    <br/>
+    <br/>
+    <br/>
+    <h1 class="borderfit"> My Projects</h1>
     <div class="borderfit">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio quas laborum officia? In dolores laborum accusamus, pariatur reprehenderit error iure tempora expedita at exercitationem, aut illo aperiam fugit id quo.</p>
     </div>
