--- a/gallery.html
+++ b/gallery.html
@@ -8,15 +8,16 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="test.css"> -->
 </head>
-<body>
-    <div class="wrapper">
-        <h1 class="floating borderfit">Zachary Sollecito</h1>'
-        <form action="./contact.html">
-            <button  type='submit'>Contact</button>
-        </form>
-        <form action="./index.html">
-            <button type='submit'>About Me</button>
-        </form><br><br>
+<body><h1 class="floating borderfit">Zachary Sollecito</h1>
+    <form action="./contact.html">
+        <button type='submit'>Contact</button>
+    </form>
+    <form action="./index.html">
+        <button type='submit'>About Me</button>
+    </form>
+    <br/>
+    <br/>
+    <br/>
     </div>
     <div class="borderfit">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio quas laborum officia? In dolores laborum accusamus, pariatur reprehenderit error iure tempora expedita at exercitationem, aut illo aperiam fugit id quo.</p>
