fixed margin space on the gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zachary Sollecito</title>
     <link type="text/css" rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="test.css"> -->
 </head>
 <body>
     <h1 class="floating borderfit">Zachary Sollecito</h1>
@@ -20,7 +19,7 @@
     <br/>
     <br/>
     <h1 class="borderfit"> My Projects</h1>
-    <div class="borderfit">
+    <div class="borderfit marge10">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio quas laborum officia? In dolores laborum accusamus, pariatur reprehenderit error iure tempora expedita at exercitationem, aut illo aperiam fugit id quo.</p>
     </div>
 
