updating changes from yesterday, gallery.html and style

--- a/gallery.html
+++ b/gallery.html
@@ -18,11 +18,32 @@
     <br/>
     <br/>
     <br/>
-    <h1 class="borderfit"> My Projects</h1>
-    <div class="borderfit marge10">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio quas laborum officia? In dolores laborum accusamus, pariatur reprehenderit error iure tempora expedita at exercitationem, aut illo aperiam fugit id quo.</p>
+    <table>
+        <tr>
+            <td>
+                <h1 class="borderfit"> Portfolio</h1>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="container projectimg">
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="container projectimg">
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="container projectimg">
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
+                </div>
+            </td>
+        </tr>
+    </table>
+        
     </div>
-
     
 </body>
 </html>
