updating my site to the responsive version

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zachary Sollecito</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/contactstyle.css">
 </head>
 <body>
     <h1 class="floating borderfit">Zachary Sollecito</h1>
