--- a/gallery.html
+++ b/gallery.html
@@ -5,44 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zachary Sollecito</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1 class="floating borderfit">Zachary Sollecito</h1>
     <form action="./contact.html">
         <button type='submit'>Contact</button>
     </form>
     <form action="./index.html">
         <button type='submit'>About Me</button>
     </form>
-    <br/>
-    <br/>
-    <br/>
-    <table>
-        <tr>
-            <td>
+    <h1 class="floating borderfit" id="myname">Zachary Sollecito</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
                 <h1 class="borderfit"> Portfolio</h1>
-            </td>
-        </tr>
-        <tr>
-            <td>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
                 <div class="container projectimg">
                     <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
                 </div>
-            </td>
-            <td>
+            </div>
+            <div class="col-md-4">
                 <div class="container projectimg">
                     <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
                 </div>
-            </td>
-            <td>
+            </div>
+            <div class="col-md-4">
                 <div class="container projectimg">
                     <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
                 </div>
-            </td>
-        </tr>
-    </table>
-        
+            </div>
+        </div>
     </div>
     
 </body>
