added first project

--- a/gallery.html
+++ b/gallery.html
@@ -20,13 +20,13 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="borderfit"> Portfolio</h1>
+                <h1 class="borderfit">Portfolio</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <div class="container projectimg">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
+                    <a href="https://zacsol.github.io/StocksAssignment/"><img src="./assets/images/119121346-612x612.jpg"></a>
                 </div>
             </div>
             <div class="col-md-4">
