--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h1 class="borderfit">Zachary Sollecito</h1>
-                <img class="profile" src="./assets/Untitled.png" alt="Zachary Sollecito" class='center'/>
+                <img class="profile" src="./assets/images/Untitled.png" alt="Zachary Sollecito" class='center'/>
                 <p class='noindent borderfit'>Future Full Stack Web Developer</p>
             </div>
             <div class="col-md-8">
