--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+        <div id="blackBox"></div>
     <form action="./gallery.html">
         <button type='submit'>Gallery</button>
     </form>
@@ -18,7 +19,6 @@
     </form>
     <br/>
     <br/>
-    
     <div class="container">
         <div class="row">
             <div class="col-md-4">
