adding to portfolio with style

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zachary Sollecito</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Righteous" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="container projectimg">
-                    <a href="https://zacsol.github.io/StocksAssignment/"><img src="./assets/images/119121346-612x612.jpg"></a>
+                    <a href="https://zacsol.github.io/StocksAssignment/"><img src="./assets/images/119121346-612x612(1).jpg"></a>
                 </div>
             </div>
             <div class="col-md-4">
