--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/css/contactstyle.css">
 </head>
 <body>
+    <div id="blackBox"></div>
     <h1 class="floating borderfit">Zachary Sollecito</h1>
     <form action="./gallery.html">
         <button type='submit'>Gallery</button>
