--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <div id="blackBox"></div>
     <form action="./contact.html">
         <button type='submit'>Contact</button>
     </form>
