--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="container projectimg">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
+                <div class="container projectimg">                    
+                    <a href="https://github.com/ZacSol/liri_node_app"><img src="./assets/images/LIRIprojectImg.png"></a>
                 </div>
             </div>
             <div class="col-md-4">
