--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <div id="blackBox"></div>
     <form action="./gallery.html">
-        <button type='submit'>Gallery</button>
+        <button type='submit'>Portfolio</button>
     </form>
     <form action="./contact.html">
         <button  type='submit'>Contact</button>
