--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div id="blackBox"></div>
     <h1 class="floating borderfit">Zachary Sollecito</h1>
     <form action="./gallery.html">
-        <button type='submit'>Gallery</button>
+        <button type='submit'>Portfolio</button>
     </form>
     <form action="./index.html">
         <button type='submit'>About Me</button>
