--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container projectimg">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple71/v4/47/cf/cf/47cfcf79-9e1d-b21f-8e10-2658b7650c15/mzl.oiljceng.png/246x0w.jpg" alt="">
+                    <a href="https://tranquil-hollows-85035.herokuapp.com/"><img src="./assets/images/ef.png"></a>
                 </div>
             </div>
         </div>
