added compliments and mutantFinder

--- a/gallery.html
+++ b/gallery.html
@@ -25,19 +25,24 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">
-                <div class="container projectimg">
+            <div class="col-lg-4 col-md-6">
+                <div class="container projectImg">
                     <a href="https://zacsol.github.io/StocksAssignment/"><img src="./assets/images/119121346-612x612(1).jpg"></a>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="container projectimg">                    
+            <div class="col-lg-4 col-md-6">
+                <div class="container projectImg">                    
                     <a href="https://github.com/ZacSol/liri_node_app"><img src="./assets/images/LIRIprojectImg.png"></a>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="container projectimg">
-                    <a href="https://tranquil-hollows-85035.herokuapp.com/"><img src="./assets/images/ef.png"></a>
+            <div class="col-lg-4 col-md-6">
+                <div class="container projectImg">
+                    <a href="https://tranquil-hollows-85035.herokuapp.com/"><img src="./assets/images/mutantFinder.PNG"></a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="container projectImg">
+                    <a href="https://radiant-eyrie-90587.herokuapp.com/"><img src="./assets/images/Compliment.png"></a>
                 </div>
             </div>
         </div>
