--- a/gallery.html
+++ b/gallery.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zachary Sollecito</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald|Righteous" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <div id="blackBox"></div>
     <form action="./contact.html">
@@ -25,28 +28,49 @@
             </div>
         </div>
         <div class="row">
+            <!-- Stock Search -->
             <div class="col-lg-4 col-md-6">
-                <div class="container projectImg">
-                    <a href="https://zacsol.github.io/StocksAssignment/"><img src="./assets/images/119121346-612x612(1).jpg"></a>
+                <div class="container">
+                    <a href="https://zacsol.github.io/StocksAssignment/"><img class="projectImg" src="./assets/images/119121346-612x612(1).jpg"></a>
                 </div>
             </div>
+            <!-- LIRIbot -->
             <div class="col-lg-4 col-md-6">
-                <div class="container projectImg">                    
-                    <a href="https://github.com/ZacSol/liri_node_app"><img src="./assets/images/LIRIprojectImg.png"></a>
+                <div class="container">
+                    <a href="https://github.com/ZacSol/liri_node_app"><img class="projectImg" src="./assets/images/LIRIprojectImg.png"></a>
                 </div>
             </div>
+            <!-- MutantFinder -->
             <div class="col-lg-4 col-md-6">
-                <div class="container projectImg">
-                    <a href="https://tranquil-hollows-85035.herokuapp.com/"><img src="./assets/images/mutantFinder.PNG"></a>
+                <div class="container">
+                    <a href="https://tranquil-hollows-85035.herokuapp.com/"><img class="projectImg" src="./assets/images/mutantFinder.PNG"></a>
                 </div>
             </div>
+            <!-- Compliments -->
             <div class="col-lg-4 col-md-6">
-                <div class="container projectImg">
-                    <a href="https://radiant-eyrie-90587.herokuapp.com/"><img src="./assets/images/Compliment.png"></a>
+                <div class="container">
+                    <a href="https://radiant-eyrie-90587.herokuapp.com/"><img class="projectImg" src="./assets/images/Compliments.png"></a>
                 </div>
             </div>
+            <!-- Wham!azon -->
+            <div class="col-lg-4 col-md-6">
+                <div class="container">
+                    <a href="https://polar-badlands-32116.herokuapp.com/"><img class="projectImg" src="./assets/images/whamazon.png"></a>
+                </div>
+            </div>
+            <!-- RecipeBox -->
+            <div class="col-lg-4 col-md-6">
+                <div class="container">
+                    <a href="https://immense-crag-85092.herokuapp.com/"><img class="projectImg" src="https://cdn11.bigcommerce.com/s-3d7tts/images/stencil/2048x2048/products/137/427/il_fullxfull.1409565417_pttb__94219.1528759451.jpg?c=2"></a>
+                </div>
+            </div>
+            <!-- <div class="col-lg-4 col-md-6">
+                <div class="container">
+                    <a href=""><img class="projectImg" src=""></a>
+                </div>
+            </div> -->
         </div>
     </div>
-    
+
 </body>
 </html>
