--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                     <label for="fname">Your Name</label>
                 </div>
                 <div class="col-75">
-                    <input type="text" id="fname" name="name">
+                    <input type="text" id="fname" name="name" placeholder="Jane Doe">
                 </div>
             </div>
             <div class="row">
@@ -37,7 +37,7 @@
                     <label for="lname">Your Email</label>
                 </div>
                 <div class="col-75">
-                    <input type="text" id="lname" name="email">
+                    <input type="text" id="lname" name="email" placeholder="name@email.com">
                 </div>
             </div>
             <div class="row">
@@ -45,11 +45,11 @@
                     <label for="subject">Subject</label>
                 </div>
                 <div class="col-75">
-                    <textarea id="subject" name="subject" style="height:200px"></textarea>
+                    <textarea id="subject" name="subject" style="height:200px" placeholder="This form is non-functional. :)"></textarea>
                 </div>
             </div>
             <div class="row">
-                <input type="submit" value="Submit">
+                <button disabled>Submit</button>
             </div>
         </form>
     </div>
