--- a/index.html
+++ b/index.html
@@ -18,35 +18,27 @@
         <button  type='submit'>Contact</button>
     </form>
     <br/>
-    <br/>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h1 class="borderfit">Zachary Sollecito</h1>
-                <img class="center profile" src="./assets/images/Untitled.png" alt="Zachary Sollecito"/>
-                <p class='noindent borderfit'>Future Full Stack Web Developer</p>
+                <h1 class="borderfit spaceBelow sidePad">Zachary Sollecito</h1>
+                <img class="center profile spaceBelow" src="./assets/images/Untitled.png" alt="Zachary Sollecito"/>
+                <p class='noindent borderfit sidePad'>Junior Full-Stack Web Developer</p>
             </div>
             <div class="col-md-8">
                 <div class="textbox">
-                    <p>I was born in New Jersey and moved to Texas when I was ten. I worked retail positions and tried
-                            different college paths after graduating high school. I was a student at UT Arlington
-                            in the computer engineering program. I took a break from class and I needed to work as much as I could to build my nest egg. 
-                            I held several retail positions over the course of about 6 years, trying to find that 
-                            perfect fit.</p>
-                    <p>During this period, I spent a lot of time and effort to try to move 
-                            to Norway, but I couldn't secure a job due to lack of fluency in the language. Even getting a 
-                            student visa seemed impossible for that same reason. I took it upon myself to learn the language
-                            and I am still learning it to this day.</p>
-                    <p>I am currently a student in the TEKsystems SMU Coding Bootcamp.
-                            I am hoping to use the skills learned during this course to find
-                            employment in a tech based field that I am interested in and 
-                            can where I fit the best. </p>
+                    <p>Originally from New Jersey and moved to Texas at an early age. I was a student at UT Arlington in the computer engineering program. I took a break from classes and held several retail positions.</p>
+
+                    <p>I spent a lot of time and effort to try to move to Norway, but I couldn't secure a job due to lack of fluency in the language. Even getting a student visa seemed impossible for that very reason. I took it upon myself to learn the language and I am still learning it to this day.</p>
+
+                    <p>I recently graduated the TEKsystems/SMU Coding Bootcamp. I am hoping to use the skills learned during this course to find
+                            employment in a tech based field that I am interested in and can where I fit the best. </p>
                 </div>    
                 <br>
                 <div class="borderfit">
                     <h2>Most recent life things:</h2>
                     <ul>
-                        <li>Started Coding Bootcamp</li>
+                        <li>Completed Coding Bootcamp</li>
                         <li>Associate of Science Degree</li>
                         <li>Learning Norwegian</li>
                         <li>Traveling to Norway</li>
