--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
     <form action="./index.html">
         <button type='submit'>About Me</button>
     </form>
-    <div class="container fullWide">
+    <div class="container">
         <div class="row fullWide">
             <div class="col-xs-12 col-md-5 spaceBelow"><h1 class="floating borderfit title sidePad" id="myname">Zachary Sollecito</h1></div>
             <div class="col-xs-12 col-md-4 center spaceBelow">
