--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </form>
     <br/>
     <div class="container">
-        <div class="row">
+        <div class="row fullWide">
             <div class="col-md-4">
                 <h1 class="borderfit spaceBelow sidePad">Zachary Sollecito</h1>
                 <img class="center profile spaceBelow" src="./assets/images/Untitled.png" alt="Zachary Sollecito"/>
