added space below title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col-md-4">
                 <h1 class="borderfit spaceBelow sidePad">Zachary Sollecito</h1>
                 <img class="center profile spaceBelow" src="./assets/images/Untitled.png" alt="Zachary Sollecito"/>
-                <p class='noindent borderfit sidePad'>Junior Full-Stack Web Developer</p>
+                <p class='noindent borderfit sidePad spaceBelow'>Junior Full-Stack Web Developer</p>
             </div>
             <div class="col-md-8">
                 <div class="textbox">
