more styling changes

--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,18 @@
 </head>
 <body>
     <div id="blackBox"></div>
-    <h1 class="floating borderfit">Zachary Sollecito</h1>
     <form action="./gallery.html">
-        <button type='submit'>Portfolio</button>
+        <button id="galleryBtn" type='submit'>Portfolio</button>
+    </form>
+    <form action="./contact.html">
+        <button id="contactBtn" type='submit'>Contact</button>
     </form>
     <form action="./index.html">
-        <button type='submit'>About Me</button>
+        <button id="aboutBtn" type='submit'>About Me</button>
     </form>
-    <br/>
-    <br/>
-    <br/>
-    <h1 class="borderfit"> Contact Me</h1>
+    <div id="contactName"><h1 class="borderfit" >Zachary Sollecito</h1></div>
     <div class="container">
+        <h1 class="borderfit"> Contact Me</h1>
         <form action="/action_page.php">
             <div class="row">
                 <div class="col-25">
