--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <body>
         <div id="blackBox"></div>
     <form action="./gallery.html">
-        <button type='submit'>Portfolio</button>
+        <button id="galleryBtn" type='submit'>Portfolio</button>
     </form>
     <form action="./contact.html">
-        <button  type='submit'>Contact</button>
+        <button id="contactBtn" type='submit'>Contact</button>
+    </form>
+    <form action="./index.html">
+        <button id="aboutBtn" type='submit'>About Me</button>
     </form>
     <br/>
-    <div class="container">
+    <div class="container" id="indexContainer">
         <div class="row fullWide">
             <div class="col-md-4">
                 <h1 class="borderfit spaceBelow sidePad">Zachary Sollecito</h1>
