--- a/gallery.html
+++ b/gallery.html
@@ -14,11 +14,14 @@
 
 <body>
     <div id="blackBox"></div>
+    <form action="./gallery.html">
+        <button id="galleryBtn" type='submit'>Portfolio</button>
+    </form>
     <form action="./contact.html">
-        <button type='submit'>Contact</button>
+        <button id="contactBtn" type='submit'>Contact</button>
     </form>
     <form action="./index.html">
-        <button type='submit'>About Me</button>
+        <button id="aboutBtn" type='submit'>About Me</button>
     </form>
     <div class="container">
         <div class="row fullWide">
