--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
     <form action="./index.html">
         <button id="aboutBtn" type='submit'>About Me</button>
     </form>
-    <div class="container">
+    <div class="container" id="galleryContainer">
         <div class="row fullWide">
             <div class="col-xs-12 col-md-5 spaceBelow"><h1 class="floating borderfit title sidePad" id="myname">Zachary Sollecito</h1></div>
             <div class="col-xs-12 col-md-4 center spaceBelow">
