remove my name from contact page

--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,11 @@
     <form action="./index.html">
         <button id="aboutBtn" type='submit'>About Me</button>
     </form>
-    <div id="contactName"><h1 class="borderfit" >Zachary Sollecito</h1></div>
+    <div id="contactName">
+        <!-- <h1 class="borderfit" >Zachary Sollecito</h1> -->
+        <h1 class="borderfit">Contact Me</h1>
+    </div>
     <div class="container">
-        <h1 class="borderfit"> Contact Me</h1>
         <form action="/action_page.php">
             <div class="row">
                 <div class="col-25">
