fixed web view, reduced extra space but didn't eliminate

--- a/gallery.html
+++ b/gallery.html
@@ -33,42 +33,42 @@
         <div class="row">
             <!-- Stock Search -->
             <div class="col-lg-4 col-md-6">
-                <div class="container spaceBelow">
+                <div class="wrapper spaceBelow">
                     <a href="https://zacsol.github.io/StocksAssignment/"><img class="projectImg" src="./assets/images/119121346-612x612(1).jpg"></a>
                 </div>
             </div>
             <!-- LIRIbot -->
             <div class="col-lg-4 col-md-6">
-                <div class="container spaceBelow">
+                <div class="wrapper spaceBelow">
                     <a href="https://github.com/ZacSol/liri_node_app"><img class="projectImg" src="./assets/images/LIRIprojectImg.png"></a>
                 </div>
             </div>
             <!-- MutantFinder -->
             <div class="col-lg-4 col-md-6">
-                <div class="container spaceBelow">
+                <div class="wrapper spaceBelow">
                     <a href="https://tranquil-hollows-85035.herokuapp.com/"><img class="projectImg" src="./assets/images/mutantFinder.PNG"></a>
                 </div>
             </div>
             <!-- Compliments -->
             <div class="col-lg-4 col-md-6">
-                <div class="container spaceBelow">
+                <div class="wrapper spaceBelow">
                     <a href="https://radiant-eyrie-90587.herokuapp.com/"><img class="projectImg" src="./assets/images/Compliments.png"></a>
                 </div>
             </div>
             <!-- Wham!azon -->
             <div class="col-lg-4 col-md-6">
-                <div class="container spaceBelow">
+                <div class="wrapper spaceBelow">
                     <a href="https://polar-badlands-32116.herokuapp.com/"><img class="projectImg" src="./assets/images/whamazon.png"></a>
                 </div>
             </div>
             <!-- RecipeBox -->
             <div class="col-lg-4 col-md-6">
-                <div class="container spaceBelow">
+                <div class="wrapper spaceBelow">
                     <a href="https://immense-crag-85092.herokuapp.com/"><img class="projectImg" src="https://cdn11.bigcommerce.com/s-3d7tts/images/stencil/2048x2048/products/137/427/il_fullxfull.1409565417_pttb__94219.1528759451.jpg?c=2"></a>
                 </div>
             </div>
             <!-- <div class="col-lg-4 col-md-6">
-                <div class="container spaceBelow">
+                <div class="wrapper spaceBelow">
                     <a href=""><img class="projectImg" src=""></a>
                 </div>
             </div> -->
