removed contact button

--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
     <form action="./gallery.html">
         <button id="galleryBtn" type='submit'>Portfolio</button>
     </form>
-    <form action="./contact.html">
+    <!-- <form action="./contact.html">
         <button id="contactBtn" type='submit'>Contact</button>
-    </form>
+    </form> -->
     <form action="./index.html">
         <button id="aboutBtn" type='submit'>About Me</button>
     </form>
