edited bio text

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
             </div>
             <div class="col-md-8">
                 <div class="textbox">
-                    <p>Originally from New Jersey and moved to Texas at an early age. I was a student at UT Arlington in the computer engineering program. I took a break from classes and held several retail positions.</p>
+                    <p>Originally from New Jersey and moved to Texas at an early age. After graduating high school, I worked retail positions and explored different college paths, but nothing sparked my interest like computer engineering. Therefore, I enrolled as a student at UT Arlington in the computer engineering program.</p>
 
-                    <p>I spent a lot of time and effort to try to move to Norway, but I couldn't secure a job due to lack of fluency in the language. Even getting a student visa seemed impossible for that very reason. I took it upon myself to learn the language and I am still learning it to this day.</p>
+                    <p>I spent a lot of time and effort organizing a move to Norway. During this time, I found getting a student/work visa nearly impossible due to lack of fluency in the language. I took it upon myself to learn the language and continue to do so to this day.</p>
 
-                    <p>I recently graduated the TEKsystems/SMU Coding Bootcamp. I am hoping to use the skills learned during this course to find
-                            employment in a tech based field that I am interested in and can where I fit the best. </p>
+                    <p>I recently graduated from the TEKsystems/SMU Coding Bootcamp, in which I learned necessary skills to be a full-stack web developer. Using what I have gained, I will be able to create applications to improve and facilitate life for myself and others.</p>
                 </div>    
                 <br>
                 <div class="borderfit">
