another bio edit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-8">
                 <div class="textbox">
-                    <p>Originally from New Jersey and moved to Texas at an early age. After graduating high school, I worked retail positions and explored different college paths, but nothing sparked my interest like computer engineering. Therefore, I enrolled as a student at UT Arlington in the computer engineering program.</p>
+                    <p>Originally from New Jersey and moved to Texas at an early age. After graduating high school, I worked retail positions and explored different college paths, but nothing sparked my interest like computer engineering. Therefore, I enrolled as a student at UT Arlington in the computer engineering program. Along this path, it did not feel like the perfect fit, so I took a break to explore other routes.</p>
 
                     <p>I spent a lot of time and effort organizing a move to Norway. During this time, I found getting a student/work visa nearly impossible due to lack of fluency in the language. I took it upon myself to learn the language and continue to do so to this day.</p>
 
