updated profile picture

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row fullWide">
             <div class="col-md-4">
                 <h1 class="borderfit spaceBelow sidePad">Zachary Sollecito</h1>
-                <img class="center profile spaceBelow" src="./assets/images/Untitled.png" alt="Zachary Sollecito"/>
+                <img class="center profile spaceBelow" src="./assets/images/IMG_20181128_182626~2 (2).jpg" alt="Zachary Sollecito"/>
                 <p class='noindent borderfit sidePad spaceBelow'>Junior Full-Stack Web Developer</p>
             </div>
             <div class="col-md-8">
